# Healthcare-Appointment-Booking-API

./: README.md  admin_router.py  chat_router.py  fake_db.py  main.py  mcp_tools.py  pyproject.toml  qdrant.py
src/: main.py
src/dummy_database/: fake_db.py
src/endpoints/: admin_router.py  chat_router.py
src/mcp/: mcp_client.py  mcp_tools.py
src/models/: admin_schema.py  chat_schema.py
src/tools/: mcp_tools.py
src/utils/: background_task.py  config.py  helper_func.py  qdrant.py
test/: test_chat.py
