[project]
name = "healthcare-appointment-booking-api"
version = "0.1.0"
description = "MCP-powered healthcare appointment booking backend with FastAPI, MongoDB, Redis, Qdrant, and Gemini AI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.118.1",
    "fastmcp>=2.12.4",
    "jwt>=1.4.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "pydantic>=2.12.0",
    "pymongo>=4.15.3",
    "qdrant-client>=1.15.1",
    "redis>=6.4.0",
    "uvicorn>=0.37.0",
]
